Bug 210162 - Lighttable keyboard shortcuts "On Right" do not work
Summary: Lighttable keyboard shortcuts "On Right" do not work
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: 1.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-11 09:40 UTC by Matti Rintala
Modified: 2017-08-02 17:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matti Rintala 2009-10-11 09:40:25 UTC
Version:            (using KDE 4.2.4)
Compiler:          gcc 4.4.1 
OS:                Linux
Installed from:    SuSE RPMs

When I select a thumbnail in lighttable and try to use keyboard to show it in the right panel, nothing happens (I have disabled automatic loading to right panel). This applies to the default keyboard shortcut Ctrl-R or custom shortcuts. This happened with Digikam compiled from trunk today (revision 1033766)
Comment 1 Andi Clemens 2009-10-11 10:18:01 UTC
SVN commit 1033808 by aclemens:

Wrong logic

BUG:210162

 M  +3 -3      lighttablewindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1033808