Wrong logic

BUG:210162

svn path=/trunk/extragear/graphics/digikam/; revision=1033808